[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
hex = "0.4.3"
wasm-bindgen = "0.2"
byteorder                  = { version = "1.4.3" }
wormhole-sdk               = { git = "https://github.com/wormhole-foundation/wormhole", tag="rust-sdk-2024-01-25" }
pythnet-sdk                = { path = "../pythnet/pythnet_sdk", features = ["test-utils"] }

serde_json = "1.0.128"
getrandom = { version = "0.2.12", features = ["custom"] }


[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
